Bug #28276 DeleteRead fails with multi-operation
Submitted: 7 May 2007 13:46 Modified: 15 May 2007 8:53
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:
Tags: telco62

[7 May 2007 13:46] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[7 May 2007 13:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26209

ChangeSet@1.2506, 2007-05-07 13:48:27+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#28276
    Fix DeleteRead in multi-operation
      Dont use setup_read, as it will (correctly) find that tuple is deleted
[7 May 2007 13:58] Jonas Oreland
pushed to 51-ndb, 51-telco
wont fix in telco-6.1
[10 May 2007 14:56] Bugs System
Pushed into 5.1.19-beta
[15 May 2007 8:53] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.19 and telco-6.2.1 changelogs.