ndb - bug#28276   Fix DeleteRead in multi-operation     Dont use setup_read, as it will (correctly) find that tuple is deleted